ADD changes to md1

--- a/AK_IT-P-Ns_AntonsCvetkovs_3md/AK_IT-P-Ns_AntonsCvetkovs_3md_1uzd/CMakeLists.txt
+++ b/AK_IT-P-Ns_AntonsCvetkovs_3md/AK_IT-P-Ns_AntonsCvetkovs_3md_1uzd/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
-project(untitled)
+project(AK_IT-P-Ns_AntonsCvetkovs_3md_1uzd)
 
 set(CMAKE_CXX_STANDARD 23)
 
