--- a/2. semestris/AK_IT-P-Ns_AntonsCvetkovs_1md/AK_IT-P-Ns_AntonsCvetkovs_1md_1uzd/CMakeLists.txt
+++ b/2. semestris/AK_IT-P-Ns_AntonsCvetkovs_1md/AK_IT-P-Ns_AntonsCvetkovs_1md_1uzd/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AK_IT_P_Ns_AntonsCvetkovs_1md)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(AK_IT_P_Ns_AntonsCvetkovs_1md main.cpp Character.cpp Character.h PlayerControl.h CharacterCreation.h)
+add_executable(AK_IT_P_Ns_AntonsCvetkovs_1md main.cpp Character.cpp Character.h)
