--- a/2. semestris/AK_IT-P-Ns_AntonsCvetkovs_2md/AK_IT-P-Ns_AntonsCvetkovs_2md_2uzd/CMakeLists.txt
+++ b/2. semestris/AK_IT-P-Ns_AntonsCvetkovs_2md/AK_IT-P-Ns_AntonsCvetkovs_2md_2uzd/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AK_IT_P_Ns_AntonsCvetkovs_2md_2uzd)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(AK_IT_P_Ns_AntonsCvetkovs_2md_2uzd main.cpp Vector.h Vectorh.cpp Array.h Arrayh.cpp)
+add_executable(AK_IT_P_Ns_AntonsCvetkovs_2md_2uzd main.cpp Vector.h Vectorh.cpp)
