--- a/2. semestris/AK_IT-P-Ns_AntonsCvetkovs_5md/AK_IT-P-Ns_AntonsCvetkovs_5md_2uzd/CMakeLists.txt
+++ b/2. semestris/AK_IT-P-Ns_AntonsCvetkovs_5md/AK_IT-P-Ns_AntonsCvetkovs_5md_2uzd/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AK_IT_P_Ns_AntonsCvetkovs_5md_2uzd)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(AK_IT_P_Ns_AntonsCvetkovs_5md_2uzd main.cpp Queue.h Queueh.cpp Helpers.h Helpersh.cpp Human.h Humanh.cpp)
+add_executable(AK_IT_P_Ns_AntonsCvetkovs_5md_2uzd main.cpp Queue.h Queueh.cpp Human.h Humanh.cpp)
